XQJ API: support updated to final release (Jun 24, 2009); GUI: stuck "Text (chopped)" display fixed; GUI: query info also shows errors now